--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
 
     <!-- Step 3. Images and Links -->
-    <img src="https://fueler.store/cdn/shop/articles/lewis-hamilton-career-titles-and-records-fuelertm_c312e9de-30f9-41d4-8569-5a7d12dc33a8.webp?v=1746000073" alt="Lewis Hamilton">
+    <img src="https://fueler.store/cdn/shop/articles/lewis-hamilton-career-titles-and-records-fuelertm_c312e9de-30f9-41d4-8569-5a7d12dc33a8.webp?v=1746000073" alt="Lewis Hamilton"><br>
     <a href="https://www.formula1.com/en.html">Formula 1</a>
 
     <!-- HTML buttons -->
