--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <!-- Step 3. Images and Links -->
     <img src="https://fueler.store/cdn/shop/articles/lewis-hamilton-career-titles-and-records-fuelertm_c312e9de-30f9-41d4-8569-5a7d12dc33a8.webp?v=1746000073" alt="Lewis Hamilton"><br>
-    <a href="https://www.formula1.com/en.html">Formula 1</a>
+    <a href="https://www.formula1.com/en.html">Formula 1</a><br>
 
     <!-- HTML buttons -->
-    <button type="button">Click me!</button>
+    <button type="button">Click me!</button><br>
 
     <!-- Part 2. Intermediate html -->
     <!-- Tables -->
@@ -67,6 +67,7 @@
             <td>11:00 - 12:30</td>
         </tr>
     </table>
+    <br>
 
     <!-- Step 6. Using tables for Layout -->
     <table border="1" width="100" cellpadding="12">
@@ -85,10 +86,12 @@
             </td>
         </tr>
     </table>
+    <br>
 
     <!-- Step 7. Typing Emojis-->
     <h2>My mood Today</h2>
     <p>🚀💪😊</p>
+    <br>
 
     <!-- Step 8. Form -->
     <h2>User information form</h2>
@@ -101,5 +104,6 @@
         <input type="number" id="age" name="age" placeholder="Enter your age"><br><br>
         <input type="submit" value="Submit">
     </form>
+    <br>
 </body>
 </html>
